@@ -1,6 +1,19 @@
 
 #include "ssgLocal.h"
 
+void ssgInvisible::copy_from ( ssgInvisible *src, int clone_flags )
+{
+  ssgBranch::copy_from ( src, clone_flags ) ;
+}
+
+ssgInvisible *ssgInvisible::clone ( int clone_flags )
+{
+  ssgInvisible *b = new ssgInvisible ;
+  b -> copy_from ( this, clone_flags ) ;
+  return b ;
+}
+
+
 
 ssgInvisible::ssgInvisible (void)
 {
