@@ -6,6 +6,19 @@
 
 #include <GL/gl.h>
 
+void ssgTexTrans::copy_from ( ssgTexTrans *src, int clone_flags )
+{
+  ssgBaseTransform::copy_from ( src, clone_flags ) ;
+}
+
+ssgTexTrans *ssgTexTrans::clone ( int clone_flags )
+{
+  ssgTexTrans *b = new ssgTexTrans ;
+  b -> copy_from ( this, clone_flags ) ;
+  return b ;
+}
+
+
 ssgTexTrans::ssgTexTrans ( sgCoord *c )
 {
   type |= SSG_TYPE_TEXTRANS ;
